2004-12-02  Miguel de Icaza  <miguel@ximian.com>

	* report.cs: Remove extra closing parenthesis.

	* convert.cs (Error_CannotImplicitConversion): If the name of the
	types are the same, provide some extra information.

	* class.cs (FieldBase): Use an unused bit field from the field to
	encode the `has_offset' property from the FieldMember.  This saves
	a couple of Ks on bootstrap compilation.

	* delegate.cs (NewDelegate.DoResolve): If we have an anonymous
	method as our child, return the AnonymousMethod resolved
	expression.

	* expression.cs (New.DoResolve): Allow return values from
	NewDelegate to also include AnonymousMethods.

	Fixes #70150.

2004-12-02  Marek Safar  <marek.safar@seznam.cz>

	Fix bug #70102
	* attribute.cs (Resolve): Improved implementation of params
        attribute arguments.

	* support.cs (ParameterData): Add HasParams to be faster.

2004-12-02  Atsushi Enomoto  <atsushi@ximian.com>

	all things are for /doc support:

	* doc.cs: new file that supports XML documentation generation.
	* mcs.exe.sources: added doc.cs.
	* driver.cs:
	  Handle /doc command line option.
	  Report error 2006 instead of 5 for missing file name for /doc.
	  Generate XML documentation when required, after type resolution.
	* cs-tokenizer.cs:
	  Added support for picking up documentation (/// and /** ... */),
	  including a new XmlCommentState enumeration.
	* cs-parser.jay:
	  Added lines to fill Documentation element for field, constant,
	  property, indexer, method, constructor, destructor, operator, event
	  and class, struct, interface, delegate, enum.
	  Added lines to warn incorrect comment.
	* rootcontext.cs :
	  Added Documentation field (passed only when /doc was specified).
	* decl.cs:
	  Added DocComment, DocCommentHeader, GenerateDocComment() and
	  OnGenerateDocComment() and some supporting private members for
	  /doc feature to MemberCore.
	* class.cs:
	  Added GenerateDocComment() on TypeContainer, MethodCore and Operator.
	* delegate.cs: