@@ -1,3 +1,9 @@
+2004-12-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* delegate.cs: Add checks for subtypes in paramaters and return values
+	in VerifyMethod () to add support for Covariance/Contravariance
+	in delegates.
+	
 2004-12-02  Miguel de Icaza  <miguel@ximian.com>
 
 	* report.cs: Remove extra closing parenthesis.
